--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "files.exclude": {
         ".*": true
-    }
+    },
+    "julia.environmentPath": "/home/akiva/.julia/environments/v1.12"
 } 
