The issue with GFL eigenvalue discrepancies ~10% under MF scaling has been cleared as a result of a weak grokking effect in MF. Weaker N / 20 scaling will not generate this weak grokking and we will see GFL give much closer predictions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,10 @@
     "python.analysis.extraPaths": [
         "./lib"
     ],
-    "editor.tabCompletion": "on"
+    "editor.tabCompletion": "on",
+    "python.testing.pytestArgs": [
+        "test"
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true
 }
